// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiImage is rendered 1`] = `
<figure
  class="euiImage euiImage--large testClass1 testClass2"
  role="figure"
>
  <img
    alt="alt"
    aria-label="aria-label"
    class="euiImage__img"
    data-test-subj="test subject string"
    src="/cat.jpg"
  />
</figure>
`;

exports[`EuiImage is rendered and allows full screen 1`] = `
<figure
  class="euiImage euiImage--large euiImage--allowFullScreen testClass1 testClass2"
  role="figure"
>
  <button
    aria-label="Open full screen alt image"
    class="euiImage__button"
    type="button"
  >
    <img
      alt="alt"
      aria-label="aria-label"
      class="euiImage__img"
      data-test-subj="test subject string"
      src="/cat.jpg"
    />
    <svg
      class="euiIcon euiIcon--medium euiIcon--ghost euiIcon-isLoading euiImage__icon"
      focusable="false"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    />
  </button>
</figure>
`;
